--- a/CART.html
+++ b/CART.html
@@ -174,7 +174,10 @@
     };
   </script>
 	
-	<script src="http://code.jquery.com/jquery-3.4.1.js"></script>
+	<script
+	  src="http://code.jquery.com/jquery-3.4.1.js"
+	  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+	  crossorigin="anonymous"></script>
 	<script src="js/jquery.nice-number.js"></script>
 	<script type="text/javascript">
 		$(function(){
