--- a/CART.html
+++ b/CART.html
@@ -175,8 +175,8 @@
   </script>
 	
 	<script
-	  src="http://code.jquery.com/jquery-3.4.1.js"
-	  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+	  src="http://code.jquery.com/jquery-3.4.1.min.js"
+	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 	  crossorigin="anonymous"></script>
 	<script src="js/jquery.nice-number.js"></script>
 	<script type="text/javascript">
